(refactoring) product, category pickers refactored, product variant picker added

--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="products_add_simple_product">Add simple product</string>
     <string name="products_add_product">Add product</string>
     <string name="products_choose_product">Choose product</string>
+    <string name="products_choose_product_variant">Choose product variant</string>
     <string name="products_delete_product_template_confirm">Do you really want to delete:\n%1$s?</string>
     <string name="products_categories_screen">Categories</string>
     <string name="products_attributes_screen">Attributes</string>
@@ -70,6 +71,7 @@
     // --------------------- Product Variants screen ---------------------
     <string name="products_add_product_variant">Add product variant</string>
     <string name="products_variant_of">Product variant of product:</string>
+    <string name="products_variant">Product variant:</string>
 
     <string name="variant_stock">Stock</string>
     <string name="variant_stock_amount">Amount available</string>
