--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AMOZ</string>
+    <string name="app_name">Amoz</string>
     <string name="currency">PLN</string>
     <string name="email_pattern">[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}</string>
     <string name="phone_pattern">^[+0-9]{9,15}$</string>
@@ -18,20 +18,37 @@
     <string name="support_contact_screen">Support and Contact</string>
 
     <string name="profile_screen">Profile</string>
+    <string name="profile_editing_screen">Edit Profile</string>
+
+    <string name="entry_screen">Entry</string>
+    <string name="register_screen">Register</string>
 
     <string name="company_address_screen">Address</string>
     <string name="company_workers_screen">Employees</string>
     <string name="company_customers_screen">Customers</string>
 
+    // --------------------- Entry ---------------------
+    <string name="entry_app_description">Easy product management in your warehouse</string>
+    <string name="entry_almost_ready">Almost ready! Just a few more details to go.</string>
+    <string name="entry_pick_image">Lastly, pick your profile picture!</string>
+
+    <string name="entry_sign_in_with_google">Sign in with Google</string>
+    <string name="entry_continue">Continue</string>
+    <string name="entry_create_an_account">Create account</string>
     // --------------------- Profile ---------------------
     <string name="profile_first_name">First name</string>
     <string name="profile_last_name">Last name</string>
     <string name="profile_full_name">Full name</string>
-    <string name="profile_email">Email (optional)</string>
+    <string name="profile_email">Email</string>
     <string name="profile_phone_number">Phone number</string>
     <string name="profile_sex">Sex</string>
     <string name="profile_birth_date">Birth Date</string>
     <string name="profile_employment_date">Employment Date</string>
+
+    <string name="profile_sign_out">Sign Out</string>
+    <string name="profile_edit_profile">Edit Profile</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
 
     // --------------------- Products screen ---------------------
     <string name="products_add_simple_product">Add simple product</string>
@@ -101,11 +118,43 @@
 
     <string name="select_category">Select</string>
 
+    // --------------------- Orders screen ---------------------
+    <string name="orders_status">Status</string>
+    <string name="orders_products">Products</string>
+    <string name="orders_customer">Customer</string>
+    <string name="orders_address">Address</string>
+    <string name="orders_shipping">Shipping</string>
 
+    <string name="orders_select_status">Select order status</string>
+    <string name="orders_add_product">Add product</string>
+    <string name="orders_add_customer">Add customer details</string>
+    <string name="orders_add_address">Add address</string>
+    <string name="orders_change_shipment_address">Change shipping address</string>
+
+    <string name="orders_total_price">Total price</string>
+    <string name="orders_tracking_number">Tracking number</string>
+    <string name="orders_shipping_date">Shipping date</string>
+
+    <string name="add_new">Add new</string>
+    <string name="add_new_product">Add new product</string>
+    <string name="enter_quantity">Enter the amount</string>
+    <string name="quantity">Quantity</string>
+    <string name="remove_product_from_order_title">Remove product from order</string>
+    <string name="remove_product_from_order_text">Are you sure you want to remove this product from the order?</string>
+
+    <string name="orders_create_an_order">Create an order</string>
+    <string name="orders_edit_an_order">Edit an order</string>
+
+    <string name="orders_created_from">Created from</string>
+    <string name="orders_created_to">Created to</string>
+    <string name="orders_sent_from">Sent</string>
+    <string name="orders_sent_to">Sent to</string>
     // --------------------- Company screen ---------------------
     <string name="company_logo">Company logo</string>
     <string name="company_logo_change">Update company logo</string>
     <string name="company_name">Company name</string>
+    <string name="company_address_of_registration">Company address of registration</string>
+    <string name="company_screen_description">This is your company. Manage your employees, add customers and change all company data if you need.</string>
     <string name="company_screen_description_owner">This is your company. Manage your employees, add customers and change all company data if you need.</string>
     <string name="company_screen_description_regular">This is the company you work for. You can add clients, see all the necessary information about the company and its employees, if necessary.</string>
     <string name="company_address">Company address</string>
@@ -135,6 +184,14 @@
     <string name="company_add_customer_successful">Customer successfully added</string>
     <string name="company_update_customer_successful">Customer successfully updated</string>
 
+    <string name="company_no_company">There is nothing here yet…
+        Register your company or join existing one!</string>
+    <string name="company_register">Register your company</string>
+
+    <string name="company_create_text">Tell us about your company!</string>
+    <string name="company_invitation_window_title">Invitation to the company</string>
+    <string name="company_invitation_window_text"> Do you want to join this company?</string>
+
     // --------------------- Stock update ---------------------
     <string name="empty_list_greeting">Add product variant to manage it\'s stock</string>
     <string name="add_product_variant">Add product variant</string>
@@ -155,8 +212,11 @@
     <string name="done">Done</string>
     <string name="close">Close</string>
     <string name="confirm">Confirm</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
     <string name="action_undone">This action cannot be undone</string>
     <string name="nothing_here">There is nothing here yet…</string>
+    <string name="add_image">Click to add image</string>
 
 
     // --------------------- Filters ---------------------
@@ -165,6 +225,10 @@
 
     <string name="price_from">Price from</string>
     <string name="price_to">Price to</string>
+    <string name="creation_date_from">Creation date from</string>
+    <string name="creation_date_to">Creation date to</string>
+    <string name="sending_date_from">Sending date from</string>
+    <string name="sending_date_to">Sending date to</string>
 
     <string name="sorting_type">Sorting type</string>
     <string name="sorting_type_none">No sorting</string>
@@ -173,6 +237,10 @@
     <string name="sorting_type_descending_name">Descending by name (Z-a)</string>
     <string name="sorting_type_ascending_price">Ascending by price (A-z)</string>
     <string name="sorting_type_descending_price">Descending by price (Z-a)</string>
+    <string name="sorting_type_ascending_time_of_sending">Ascending by time of sending</string>
+    <string name="sorting_type_descending_time_of_sending">Descending by time of sending</string>
+    <string name="sorting_type_ascending_time_of_creation">Ascending by time of creation</string>
+    <string name="sorting_type_descending_time_of_creation">Descending by time of creation</string>
 
     <string name="search_products_placeholder">Search products by name, vendor</string>
     <string name="search_categories_placeholder">Search categories by name</string>
