(tests)category view model tested, images to products added

--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
     <string name="products_add_product_variant">Add product variant</string>
     <string name="products_variant_of">Product variant of product:</string>
     <string name="products_variant">Product variant:</string>
+    <string name="product_variant_set_as_main">Set as main variant</string>
 
     <string name="variant_stock">Stock</string>
     <string name="variant_stock_amount">Amount available</string>
@@ -248,4 +249,9 @@
 
     <string name="search_products_placeholder">Search products by name, vendor</string>
     <string name="search_categories_placeholder">Search categories by name</string>
+
+    // --------------------- Error messages ---------------------
+    <string name="not_blank"> should not be blank</string>
+
+
 </resources>
