--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Amoz</string>
-    <string name="currency">PLN</string>
     <string name="email_pattern">[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}</string>
     <string name="phone_pattern">^[+0-9]{9,15}$</string>
 
@@ -261,6 +260,14 @@
 
     <string name="search_products_placeholder">Search products by name, vendor</string>
     <string name="search_categories_placeholder">Search categories by name</string>
+    // --------------------- Settings ---------------------
+    <string name="currency">Currency</string>
+    <string name="currency_edit">Edit currency</string>
+    <string name="current_currency">Current currency</string>
+    <string name="default_currency">USD</string>
+
+    <string name="app_theme_mode_edit">Edit app theme</string>
+    <string name="select_app_theme">Select app theme</string>
 
     // --------------------- Error messages ---------------------
     <string name="not_blank"> should not be blank</string>
